--- a/vignettes/action-potential-analysis.Rmd
+++ b/vignettes/action-potential-analysis.Rmd
@@ -21,7 +21,7 @@ library(reactable)
 
 # Action Potential Analysis
 
-> Note: This package does not yet contain functions to analyze and plot action potential data. However, I am including this vignette here to show you how to perform raw data analysis in Clampfit. The resulting data will be ready to use in future package versions.
+> Note: This package does not yet contain functions to analyze and plot action potential data. However, I am including this vignette here to show you how to perform raw data analysis in Clampfit. The resulting data will be ready to use in future versions of *patchclampplotteR.*
 
 This vignette will demonstrate how to analyze action potential properties using a raw .abf file. You will identify the first current injection that resulted in action potentials and then select the first action potential within this sweep for further analyses.
 
@@ -36,17 +36,17 @@ knitr::include_graphics("figures/AP-first-trace.png")
 Before you begin, you should set up a .csv file with the following columns:
 
 * `Letter` The unique letter identifier of a single cell. You can use this to link data from different recordings taken from the same cell.
-* `State` Must be `Baseline` or `Post`, indicating a current clamp protocol taken after a hormone has been added or some other modification has taken place.
+* `State` A character value. In this example, the values are `Baseline` and `Insulin`, indicating a current clamp protocol taken after the cell had been exposed to 500 nM insulin for 25 minutes.
 * `Time_of_Threshold` A numerical value (in ms) used to determine properties like the latency to fire.
 * `t_x` The membrane potential at the moment that an action potential is initiated, also known as the threshold.
-* `t_11` The derivative of the trace you are analyzing. Must be 10 or greater to properly identify the threshold.
+* `t11` The derivative of the trace you are analyzing. Must be 10 mV/ms or greater to properly identify the threshold.
 * `ID` A character value indicating the recording number. This corresponds to the `File Name` column that is automatically generated in the Results sheet in Clampfit.
-* `First_sweep_with_APs` A handy column containing the sweep number where action potentials first appeared (going from the lowest current injection to the highest, identify this sweep visually).
-* `Trace_start` This is an automatic value calculated by Clampfit, and it corresponds to the sweep number. It is not used in any analyses, but it will automatically come with the analysis.
+* `First_sweep_with_APs` A number representing the earliest sweep number where action potentials first appeared.
+* `Trace_start` This is an automatic value calculated by Clampfit, and it corresponds to the sweep number. It is not used in any analyses, but it will automatically be included in the Results sheet in Clampfit.
 * `Peak_amplitude` The membrane potential (in mV) during maximum depolarization.
-* `Time_to_Peak`The time of the peak amplitude, which should be relative to the `Time_of_Threshold` if you have repositioned Cursor 1 to the `Time_of_Threshold`.
+* `Time_to_Peak`The time of the peak amplitude, which should also be relative to the `Time_of_Threshold` if you have repositioned Cursor 1 to the `Time_of_Threshold`.
 * `Antipeak_amplitude` The afterhyperpolarization amplitude (in mV)
-* `Time_of_antipeak` The time of the after-hyperpolarization, which should be relative to the `Time_of_Threshold` if you have repositioned Cursor 1 to the `Time_of_Threshold`.
+* `Time_of_antipeak` The time of the after-hyperpolarization, which should be relative to the `Time_of_Threshold`.
 * `Half-width` The width of the action potential when the membrane potential is half of the `Peak_amplitude`.
 
 ```{r ap-properties-image, fig.align = 'center', fig.alt = "An image of an action potential with labels indicating properties such as the peak amplitude, half-width, after-hyperpolarization, and latency to fire.", echo=F}
@@ -59,18 +59,18 @@ knitr::include_graphics("figures/AP-properties.png")
 
 1. Open the .abf file containing the current clamp step protocol.
 2. Press the “Enter” key to show just one sweep at a time. It will begin at the sweep corresponding to the lowest current injection. Use greater than symbol (>; on some computers you don’t even need to press the shift key) to cycle up through the sweeps.
-3. Move up to sweeps corresponding to higher current injections until you identify the first sweep that contains an action potential. This will be named `t_x`, since it may be `t_5` in one recording, or `t_6` in another, etc. 
+3. Move up to sweeps corresponding to higher current injections until you identify the first sweep that contains an action potential. I will call this `t_x`, since it may be `t5` in one recording, or `t6` in another, etc. 
 4. Position cursors 1 and 2 around the first action potential in `t_x`. Cursor 1 should be before the threshold (aim for the area before the slope of the curve increases steeply). Cursor 2 should be in the after-hyperpolarization region.
 
-> It is important that cursor 2 touches the curve at a value that is lower than the voltage value for cursor 1. If cursor 1 is lower, then Clampfit may identify the location at cursor 1 as the after-hyperpolarization region.
+> It is important that cursor 2 touches the curve at a value that is lower than the voltage value for cursor 1. If cursor 1 is lower, then Clampfit may identify the location at cursor 1 as the after-hyperpolarization region if you forget to move the cursor to the threshold (see step 11).
 
 ```{r cursor-image, fig.align = 'center', fig.alt = "A screenshot of Clampfit showing cursors positioned around the first action potential. The first cursor is located at a point with a y-axis value that is greater than cursor 2.", echo=F}
 knitr::include_graphics("figures/AP-cursors.png")
 ```
 
-5. Click on the arithmetic button (it is the button with basic math symbols), then Add Traces. Write "1" and click OK. This will add a new empty trace, called `t_11`.
+5. Click on the arithmetic button (it is the button with basic math symbols), then Add Traces. Write "1" and click OK. This will add a new empty trace, called `t11`.
 
-6. `t_11` should be the derivative of `t_x`. In the `Expression` box, write `t11=diff(t6)` (replace `t6` with your value for `t_x`). 
+6. `t11` should be the derivative of `t_x`. In the `Expression` box, write `t11=diff(t6)` (replace `t6` with your value for `t_x`). 
 
 ```{r expression-image, fig.align = 'center', fig.alt = "A screenshot of the Arithmetic box of Clampfit showing the formula t11=diff(t6) inserted into the expression field.", echo=F}
 knitr::include_graphics("figures/AP-expression-box.png")
@@ -78,9 +78,9 @@ knitr::include_graphics("figures/AP-expression-box.png")
 
 ## Find threshold
 
-7. Click on `Edit` -> `Transfer Traces` and set the `Region to transfer` as `Cursors 1..2`. In the `Trace Selection` category, choose only `Vm_primary ()` as the signal. Select `t_x` and `t_11` for the traces, then click OK.
+7. Click on `Edit` -> `Transfer Traces` and set the `Region to transfer` as `Cursors 1..2`. In the `Trace Selection` category, choose only `Vm_primary ()` as the signal. Select `t_x` and `t11` for the traces, then click OK.
 
-8. The `Results` page will display three columns: `Time (ms)`, `Trace #6 (or #5, #4, etc.)`, and `Trace #11`. In this example, the middle column is `Trace #6`, but this name will vary depending on the data. `Trace #6` is the membrane potential in mV, and `Trace #11` is the derivative of `Trace #6`.
+8. The `Results` page will display three columns: `Time (ms)`, `Trace #6 (or #5, #7, etc.)`, and `Trace #11`. In this example, the middle column is `Trace #6`, but this name will vary depending on the data. `Trace #6` is the membrane potential in mV, and `Trace #11` is the derivative of `Trace #6`.
 
 > Warning: The Results page of the transferred traces does not clear between files. If you are doing several analyses in one session, ensure that you are looking at the correct columns with the traces corresponding to the active recording.
 
@@ -90,11 +90,11 @@ knitr::include_graphics("figures/AP-expression-box.png")
 
 ```{r echo=FALSE}
 sample_ap_data <- data.frame(
-  Letter = c("A"),
+  Letter = c("BN"),
   State	= c("Baseline"),
-  Time_of_Threshold = c(239.6001),
-  t_x = c(-29.63256836),
-  t_11 = c(67.13457489)
+  Time_of_Threshold = c(373.50),
+  t_x = c(-32.10),
+  t11 = c(10.38)
 )
 
 reactable(sample_ap_data)
@@ -104,18 +104,22 @@ reactable(sample_ap_data)
 
 11. Double-click on Cursor 1 and change its Time value to match the `Time_of_Threshold`.
 
+```{r cursor-image-revised, fig.align = 'center', fig.alt = "A screenshot of Clampfit showing cursors positioned around the first action potential. The first cursor is now located at the x-value where the membrane potential is equal to the threshold.", fig.cap = "Note how Cursor 1 is shifted to the right. It is located a the x-value where the membrane potential crosses the threshold." echo=F}
+knitr::include_graphics("figures/AP-cursors-new.png")
+```
+
 > Warning! If you do not reposition Cursor 1 to be at the time of threshold, the values for `Time_of_Peak` and `Time_of_Antipeak` will be incorrect!
 
-12. Click on the Statistics button (a small icon with a summation symbol \u2211 on top of it) or press `Alt+s`.
+12. Click on the Statistics button (a small icon with a summation symbol on top of it) or press `Alt+s`.
 
 13. Set the following settings:
 * Trace Selection: Choose `Vm_primary ()` and `t_x` (in this case, `t6`)
-* Peak Polarity: Vm_primary, Positive-going
-* Baseline Region: Fixed at [paste in the threshold value]
-* Search Region 1: Range: Cursors 1..2
-* Destination Option: Replace results in sheet (prevents you from accidentally copying old data
-* Column Order: Measurement, region, Signal
-* Measurements: Peak_amplitude, Time of peak, Antipeak amplitude, Time of antipeak, Half-width
+* Peak Polarity: `Vm_primary`, `Positive`-going
+* Baseline Region: Fixed at `[paste in the threshold value (column t_x in your sheet) here]`
+* Search Region 1: Range: `Cursors 1..2`
+* Destination Option: `Replace results in sheet` (prevents you from accidentally copying old data
+* Column Order: `Measurement, region, Signal`
+* Measurements: `Peak_amplitude`, `Time of peak`, `Antipeak amplitude`, `Time of antipeak`, `Half-width`
 
 ```{r statistics-box, fig.align = 'center', fig.alt = "A screenshot of the Statistics box of Clampfit showing the correct options to select.", echo=F}
 knitr::include_graphics("figures/AP-statistics-box.png")
@@ -127,19 +131,19 @@ knitr::include_graphics("figures/AP-statistics-box.png")
 
 ```{r finalized-ap-table, echo=FALSE}
 sample_ap_data_2 <- data.frame(
-  Letter = c("A"),
+  Letter = c("BN"),
   State	= c("Baseline"),
-  Time_of_Threshold = c(239.6001),
-  t_x = c(-29.63256836),
-  t_11 = c(67.13457489),
-  ID = c("23714007.abf"),
+  Time_of_Threshold = c(373.50),
+  t_x = c(-32.10),
+  t11 = c(10.38),
+  ID = c("23711003.abf"),
   First_sweep_with_APs = c(6),
   Trace_start = c(5021),
-  Peak_amplitude = c(77.667),
-  Time_to_Peak = c(0.5),
-  Antipeak_amplitude = c(-17.3034),
-  Time_of_antipeak = c(3),
-  Half_width = c(0.79088)
+  Peak_amplitude = c(72.54),
+  Time_to_Peak = c(0.7),
+  Antipeak_amplitude = c(-17.73),
+  Time_of_antipeak = c(4.4),
+  Half_width = c(1.09)
 )
 
 reactable(sample_ap_data_2)
@@ -153,7 +157,10 @@ reactable(sample_ap_data_2)
 Here is an example of what a datasheet can look like:
 
 ```{r example-full-ap-table, echo=FALSE}
-reactable(read.csv("sample-ap-data.csv"))
+sample_full_ap_table <- read.csv("sample-ap-data.csv") %>% 
+  mutate(across(where(is.numeric), round, 2))
+
+reactable(sample_full_ap_table)
 ```
 
 
